// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`project-overview.md scaffold > Python FastAPI project with minimal data 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Project Overview — test-project

## Key Facts
**Detected:** Python · FastAPI
**Detected:** Testing: pytest

## Commands
**Detected:** Test: \`pytest\`
**Detected:** Package manager: pip

## Project Shape
**Detected:** 45 source files, 12 test files, 5 config files

## Open Questions
**Unexamined:** What does this project do? Who are the target users? What problem does it solve?
**Unexamined:** What's working? What's in progress? Known issues?

---

*Generated by Anatomia v0.2.0 on 2026-03-19T10:00:00Z*
"
`;

exports[`project-overview.md scaffold > empty result (scan failed) 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Project Overview — test-project

## Key Facts

## Commands
**Detected:** Package manager: npm

## Project Shape
**Detected:** 0 source files, 0 test files, 0 config files

## Open Questions
**Unexamined:** What does this project do? Who are the target users? What problem does it solve?
**Unexamined:** What's working? What's in progress? Known issues?

---

*Generated by Anatomia v0.2.0 on 2026-03-19T10:00:00Z*
"
`;

exports[`project-overview.md scaffold > rich TypeScript Next.js project with full data 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Project Overview — test-project

## Key Facts
**Detected:** TypeScript · Next.js
**Detected:** Database: PostgreSQL
**Detected:** Auth: NextAuth
**Detected:** Testing: Vitest
**Detected:** Payments: Stripe
**Detected:** Deploy: Vercel

## Services
**Detected:** payments: Stripe
**Detected:** email: SendGrid

## Commands
**Detected:** Build: \`npm run build\`
**Detected:** Test: \`npm run test\`
**Detected:** Lint: \`npm run lint\`
**Detected:** Package manager: npm

## Project Shape
**Detected:** 120 source files, 35 test files, 18 config files
**Detected:** \`src/app\` — Next.js app directory
**Detected:** \`src/components\` — React components
**Detected:** \`src/lib\` — Shared utilities
**Detected:** \`tests\` — Test files

## Open Questions
**Unexamined:** What does this project do? Who are the target users? What problem does it solve?
**Unexamined:** What's working? What's in progress? Known issues?

---

*Generated by Anatomia v0.2.0 on 2026-03-19T10:00:00Z*
"
`;
